--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,23 @@ To solve this, reset the box model by creating a * selector and giving it a box-
   margin: 0;
 }
 
+.left-container p {
+  font-size: 2em;
+  font-weight: 700;
+  margin: -5px -2px;
+}
+
+.calories-info span {
+  font-size: 2.4em;
+  font-weight: 700;
+  margin: -7px -2px;
+}
+
+.medium {
+  height: 5px;
+}
+
+.right {
+  justify-content: flex-end;
+}
+
