ADD third label section

--- a/styles.css
+++ b/styles.css
@@ -91,3 +91,15 @@ To solve this, reset the box model by creating a * selector and giving it a box-
   justify-content: flex-end;
 }
 
+.indent {
+  margin-left: 1em;
+}
+
+/*The :not pseudo-selector can be used to select all elements that do not match the given CSS rule*/
+.daily-value p:not(.no-divider) {
+  border-bottom: 1px solid #888989; 
+}
+
+.double-indent {
+  margin-left: 2em;
+} 
