--- a/styles.css
+++ b/styles.css
@@ -2,41 +2,29 @@
   box-sizing: border-box;
 }
 
-/* 1rem is equal to 16px
-1rem, or 16px, is the defalut font size in html element*/
 html {
   font-size: 16px;
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
-.bold {
-  font-weight: 800;
-}
-
-header h1 {
-  text-align: center;
-  margin: -4px 0;
-  letter-spacing: 0.15px;
-}
-
-/*The space-between value distributes the items evenly (with space between them) in the line. 
-The first item is on the start line, and the last one is on the end line. 
-The space-around value displays the items with space before, between, and after*/
 p {
   margin: 0;
   display: flex;
   justify-content: space-between;
 }
 
-/*by default, the browser includes the border and padding when determining an element's size.
-To solve this, reset the box model by creating a * selector and giving it a box-sizing property of border-box*/
+header h1 {
+  text-align: center;
+  margin: -4px 0;
+  letter-spacing: 0.15px
+}
+
 .label {
   border: 2px solid black;
-  box-sizing: border-box;
-  width: 275px;
+  width: 270px;
   margin: 20px auto;
   padding: 0 7px;
 }
@@ -46,21 +34,28 @@ To solve this, reset the box model by creating a * selector and giving it a box-
   margin: 2px 0;
 }
 
+.bold {
+  font-weight: 800;
+}
+
 .large {
   height: 10px;
 }
 
 .large, .medium {
-  background-color:black;
-  border:0;
+  background-color: black;
+  border: 0;
 }
-/*The rem unit stands for root em, and is relative to the font size of the html element.
-0.85rem, which would calculate to roughly 13.6px*/
+
+.medium {
+  height: 5px;
+}
+
 .small-text {
   font-size: 0.85rem;
 }
 
-/*flex-end : items are packed toward to end line*/
+
 .calories-info {
   display: flex;
   justify-content: space-between;
@@ -72,19 +67,15 @@ To solve this, reset the box model by creating a * selector and giving it a box-
 }
 
 .left-container p {
+  margin: -5px -2px;
   font-size: 2em;
   font-weight: 700;
-  margin: -5px -2px;
 }
 
 .calories-info span {
+  margin: -7px -2px;
   font-size: 2.4em;
   font-weight: 700;
-  margin: -7px -2px;
-}
-
-.medium {
-  height: 5px;
 }
 
 .right {
@@ -95,11 +86,17 @@ To solve this, reset the box model by creating a * selector and giving it a box-
   margin-left: 1em;
 }
 
-/*The :not pseudo-selector can be used to select all elements that do not match the given CSS rule*/
-.daily-value p:not(.no-divider) {
-  border-bottom: 1px solid #888989; 
-}
-
 .double-indent {
   margin-left: 2em;
-} 
+}
+
+.daily-value p:not(.no-divider) {
+  border-bottom: 1px solid #888989;
+}
+
+.note {
+  font-size: 0.6rem;
+  text-indent: -8px;
+  padding: 0 8px;
+  margin: 5px 0;
+}
